--- a/ueventd.gt-s5830.rc
+++ b/ueventd.gt-s5830.rc
@@ -1,9 +1,87 @@
-/dev/oncrpc/*             0660   radio       system
-/dev/msm_camera/*          0660   system       system
-/dev/smdcntl0               0640   radio    radio
-/dev/smdcntl1               0640   radio    radio
-/dev/smdcntl2               0640   radio    radio
-/dev/kgsl-3d0               0666   root       root
-/dev/taos               0777   root       root
-/dev/si4708               0777   root       root
-/dev/msm_preproc_ctl	    0660   system audio
+/dev/block/bml7             0770   root        root
+/dev/block/bml9             0770   root        root
+/dev/block/bml10            0770   root        root
+/dev/block/bml11            0770   root        root
+/dev/block/bml12            0770   root        root
+/dev/block/bml13            0770   root        root
+/dev/block/bml14            0770   root        root
+/dev/block/bml15            0770   root        root
+/dev/block/stl9             0770   root        root
+/dev/block/stl10            0770   root        root
+/dev/block/stl11            0770   root        root
+/dev/block/stl12            0770   root        root
+/dev/block/stl13            0770   root        root
+/dev/block/stl14            0770   root        root
+/dev/block/stl15            0770   root        root
+
+/dev/block/bml7            0770   system      radio
+/dev/block/bml10            0770   root        root
+/dev/block/bml11            0770   root        root
+
+/dev/rtc1                   0660   system      radio
+
+/dev/ppp                    0660   radio       vpn
+/dev/tun                    0640   vpn         vpn
+
+/dev/kgsl-3d0             0666   root       root
+/dev/kgsl-2d0             0666   root       root
+/dev/kgsl-2d1             0666   root       root
+/dev/msm_rotator          0660   system     graphics
+
+/dev/pmem_audio           0660   system     audio
+
+/dev/pmem_smipool*        0660   system     camera
+
+# Sensors
+/dev/mmc31xx		    0666   compass     system
+/dev/bma_accel		    0666   compass     system	    
+/dev/ecompass_ctrl	    0666   compass     system
+/dev/kr3dm_accel	    0666   compass     system
+/dev/proximity		    0666   compass     system
+/dev/accelerometer          0666   compass     system
+
+#permissions for dpram
+/dev/dpram0               0660   radio      radio
+/dev/dpram1               0660   radio      radio
+/dev/dpramerr             0660   radio      radio
+/dev/multipdp             0660   radio      radio
+/dev/ttyCSD0              0660   radio      radio
+/dev/ttySMD0              0660   radio      radio
+/dev/ttyGPS0              0660   system     system
+/dev/ttyXTRA0             0660   system     system
+
+/proc/LinuStoreIII/efs_info 0664   radio       radio
+/proc/LinuStoreIII/keystr   0664   radio       radio
+
+/dev/oncrpc/*             0660   root       qcom_oncrpc
+
+/dev/radio0               0640   fm_radio   fm_radio
+/dev/i2c-2                0660   root       system
+/dev/i2c-4                0660   root       system
+
+/dev/msm_voicememo        0660   system     audio
+
+/dev/qce                  0660   system     audio
+
+/dev/msm_pcm_lp_dec       0660   system     audio
+
+/dev/gemini0              0660   system     system
+#permissions for video
+/dev/msm_vidc_reg         0660  system       audio
+/dev/msm_vidc_dec         0660  system       audio
+/dev/msm_vidc_enc         0660  system       audio
+#permissions for audio
+/dev/msm_amrnb            0660  system       audio
+/dev/msm_amrwb            0660  system       audio
+/dev/msm_aac              0660  system       audio
+/dev/msm_qcelp            0660  system       audio
+/dev/msm_evrc             0660  system       audio
+/dev/msm_fm               0660  system       audio
+/dev/msm_acdb             0660  system       audio
+/dev/msm_wma              0660  system       audio
+/dev/msm_wmapro           0660  system       audio
+/dev/msm_qcelp_in         0660  system       audio
+/dev/msm_evrc_in          0660  system       audio
+/dev/msm_preproc_ctl      0660  system       audio
+/dev/msm_a2dp_in          0640  system       audio
+/dev/msm_amrnb_in         0640  system       audio
