--- a/init.gt-s5830.rc
+++ b/init.gt-s5830.rc
@@ -52,15 +52,15 @@ on boot
     chmod 0660 /sys/devices/platform/msm_serial_hs.0/clock
 
 
-#create  WIFI filesystem structure
-    mkdir /data/misc 01771 system misc
-    mkdir /data/misc/wifi 0770 system wifi
-    mkdir /data/misc/wifi/sockets
-    chown system wifi /data/misc/wifi/sockets
-    chmod 770 /data/misc/wifi/sockets
-    mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcp
-    mkdir /data/system 0775 system system
+    # Create the directories used by the Wireless subsystem
+	mkdir /data/misc 01771 system misc
+	mkdir /data/misc/wifi 0770 system wifi
+	mkdir /data/misc/wifi/sockets
+	chown system wifi /data/misc/wifi/sockets
+	chmod 770 /data/misc/wifi/sockets
+	mkdir /data/misc/dhcp 0770 dhcp dhcp
+	chown dhcp dhcp /data/misc/dhcp
+	mkdir /data/system 0775 system system
 
    mkdir /data/local
    chmod 0777 /data/local
@@ -100,53 +100,47 @@ on boot
     write /sys/devices/platform/mass_storage/lun0/file /dev/block/mmcblk0p1
     write /sys/bus/platform/drivers/msm_sdcc/msm_sdcc.1/polling 1
 
-service qmuxd /system/bin/qmuxd 
+service dhcp-service /system/bin/netcfg wlan0 dhcp
+        oneshot
 
-service hci_qcomm_init /system/bin/log -t qcom-bluetooth -p i "hci_qcomm_init service requested"
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
-
-service hciattach /system/bin/sh /system/etc/init.bt.sh
-    user bluetooth
-    group qcom_oncrpc bluetooth net_bt_admin system
-    disabled
-    oneshot
+on property:dev.bootcomplete=1
+        stop dhcp-service
+        start dhcp-service
 
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
+    
+service wpa_supplicant /system/bin/wpa_supplicant -Dawext -W -w -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
+	group wifi inet
+	socket wpa_wlan0 dgram 660 wifi wifi
+	disabled
+	oneshot
 
-# WPA SETTINGS
-service wpa_supplicant /system/bin/wpa_supplicant -Dawext -iwlan0 -W -c/data/misc/wifi/wpa_supplicant.conf
-    group wifi inet
-    socket wpa_wlan0 dgram 660 wifi wifi
+service wlan_mac /system/bin/wlan_mac
+    user system
+    group system net_raw net_admin inet
+    oneshot
+
+service wlan_tool /system/bin/wlan_tool
     disabled
     oneshot
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -BKL
-    disabled
-    oneshot
+	disabled
+	oneshot
 
-#service wlan_tool /system/bin/wlan_tool
-#        disabled
-#        oneshot
+service hostapd /system/bin/hostapd /data/misc/wifi/hostapd.conf
+	socket hostapd_athap0 dgram 660 wifi wifi
+	group wifi inet
+	oneshot
+	disabled
 
-#service abtfilt /system/bin/abtfilt -c -d -z -n
-#    disabled
-#    oneshot
+service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --baudrate 3000000 --patchram /system/bin/BCM2049C0_003.001.031.0088.0094.hcd /dev/ttyHS0
+	user bluetooth
+	group bluetooth net_bt_admin
+	disabled
+	oneshot
 
 service akmd /system/bin/akmd2
     oneshot
 
-on property:persist.sys.charging.disable=1
-    write /sys/module/msm_battery/parameters/usb_chg_enable 0
-
-on property:persist.sys.charging.disable=0
-    write /sys/module/msm_battery/parameters/usb_chg_enable 1
-
-service hostapd /system/bin/hostapd /data/misc/wifi/hostapd.conf
-    socket hostapd_athap0 dgram 660 wifi wifi
-    group wifi inet
-    oneshot
-    disabled
