--- a/dhcpcd.conf
+++ b/dhcpcd.conf
@@ -3,6 +3,6 @@
 
 interface wlan0
 # dhcpcd-run-hooks uses these options.
-option subnet_mask, routers, domain_name_servers, domain_search, host_name, domain_name
+option subnet_mask, routers, domain_name_servers
 # Don't send any ARP requests. This also disables IPv4LL.
 #noarp
