--- a/recovery.rc
+++ b/recovery.rc
@@ -2,7 +2,8 @@ on early-init
     start ueventd
 
 on init
-    export PATH /sbin
+    export PATH /sbin:/system/sbin:/system/bin:/system/xbin
+    export LD_LIBRARY_PATH /system/lib
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /sdcard
@@ -17,6 +18,7 @@ on init
     mkdir /system
     mkdir /data
     mkdir /cache
+    mkdir /efs
     mount /tmp /tmp tmpfs
 
 # insmod fsr/rfs modules
@@ -25,6 +27,19 @@ on init
     insmod /lib/modules/rfs_glue.ko
     insmod /lib/modules/rfs_fat.ko
     insmod /lib/modules/sec_param.ko
+
+on fs
+    mount tmpfs tmpfs /tmp
+
+on post-fs
+
+    write /proc/sys/kernel/panic_on_oops 1
+    write /proc/sys/kernel/hung_task_timeout_secs 0
+    write /proc/cpu/alignment 4
+    write /proc/sys/kernel/sched_latency_ns 10000000
+    write /proc/sys/kernel/sched_wakeup_granularity_ns 2000000
+    write /proc/sys/kernel/sched_compat_yield 1
+    write /proc/sys/kernel/sched_child_runs_first 0
 
 on boot
 
